--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -20,6 +20,7 @@
 # For example, you can ignore all files in a docs folder with the file extension .md:
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
-#!docs/README.md
+README.md
 package.json
+package-lock.json
 
