--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@webseite-herunterladen/screenshot-capture-api",
-  "version": "1.0.10",
-  "description": "Webseite-Herunterladen.de Screenshot Capture is a very simple but powerful screenshot API that anyone can easily use to create pixel-perfect website screenshots. It always uses a recent version of Chrome to ensure that all modern web features are fully supported and rendering is exactly as your customers would expect.",
+  "name": "screenshot_capture_api",
+  "version": "1.0.1",
+  "description": "Webseite_Herunterladen_de_Screenshot_Capture_is_a_very_simple_but_powerful_screenshot_API_that_anyone_can_easily_use_to_create_pixel_perfect_website_screenshots__It_always_uses_a_recent_version_of_Chrome_to_ensure_that_all_modern_web_features_are_fully_supported_and_rendering_is_exactly_as_your_customers_would_expect_",
   "license": "Unlicense",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "babel src -d dist",
-    "prepack": "npm run build",
     "test": "mocha --require @babel/register --recursive"
   },
   "browser": {
@@ -39,8 +37,5 @@
     "expect.js": "^0.3.1",
     "mocha": "^8.0.1",
     "sinon": "^7.2.0"
-  },
-  "files": [
-    "dist"
-  ]
+  }
 }
